Bug 411332 - Konsole doesn't respect "Start in same directory as current tab" when splitting view
Summary: Konsole doesn't respect "Start in same directory as current tab" when splitti...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: split-view (other bugs)
Version First Reported In: 19.08.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 411494 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-08-26 23:52 UTC by Lê Hoàng Phương
Modified: 2019-10-27 20:25 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lê Hoàng Phương 2019-08-26 23:52:41 UTC
SUMMARY
The new split view of Konsole is nice. One more thing that needs improvement is that the feature should also respect "Start in same directory as current tab" option of current Profile.

STEPS TO REPRODUCE
1. Check "Start in same directory as current tab" in current terminal's Profile
2. cd to /tmp
2. Split view

OBSERVED RESULT

New view is set to home directory

EXPECTED RESULT

New view is set to /tmp


SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.16
KDE Plasma Version: 5.16.4
KDE Frameworks Version: 5.61.0
Qt Version: 5.12.3
Kernel Version: 5.0.0-23-generic
OS Type: 64-bit
Comment 1 Christian Janoff 2019-09-09 13:02:19 UTC
Can confirm for Konsole 19.08.1 / KDE neon 5.16.4

Splitting does not respect the "Start in same directory as current tab" profile setting.
Comment 2 Mariusz Glebocki 2019-09-12 20:37:27 UTC
*** Bug 411494 has been marked as a duplicate of this bug. ***
Comment 3 Mariusz Glebocki 2019-10-27 19:46:37 UTC
Git commit a16a6189efe29707de01742d858aeeca9a6889d9 by Mariusz Glebocki.
Committed on 27/10/2019 at 01:35.
Pushed by hindenburg into branch 'master'.

Start new splits in same directory as current session

Works only when feature's option in profile settings is enabled.

M  +16   -4    src/ViewManager.cpp

https://invent.kde.org/kde/konsole/commit/a16a6189efe29707de01742d858aeeca9a6889d9
Comment 4 Mariusz Glebocki 2019-10-27 19:46:39 UTC
Git commit a16a6189efe29707de01742d858aeeca9a6889d9 by Mariusz Glebocki.
Committed on 27/10/2019 at 01:35.
Pushed by scmsync into branch 'master'.

Start new splits in same directory as current session

Works only when feature's option in profile settings is enabled.

M  +16   -4    src/ViewManager.cpp

https://commits.kde.org/konsole/a16a6189efe29707de01742d858aeeca9a6889d9