Start new splits in same directory as current session

Works only when feature's option in profile settings is enabled.

BUG: 411332